fix dj name text wrapping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -634,6 +634,8 @@ form {
       margin-top: 5px;
       margin-bottom: 4px;
       margin-left: 5px;
+      overflow: hidden;
+      font-size: 18px;
     }
     img {
       border-radius: 5px;
